--- a/nosotros.html
+++ b/nosotros.html
@@ -3,153 +3,150 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Nosotros - greenhauL</title>
+  <title>Nosotros - Mudanzas Ecológicas | greenhauL</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
   <link rel="stylesheet" href="assets/css/styles.css" />
   <link rel="stylesheet" href="assets/css/pages.css" />
   <style>
-    .fade-in {
-      opacity: 0;
-      transform: translateY(30px);
-      transition: all 0.8s ease-out;
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #f9f9f9;
+      color: #222;
     }
-    .fade-in.visible {
-      opacity: 1;
-      transform: translateY(0);
+    .section {
+      padding: 4rem 1rem;
+      background-color: #fff;
+      margin-bottom: 2rem;
+      border-radius: 12px;
+      box-shadow: 0 6px 18px rgba(0,0,0,0.05);
+    }
+    .section-title {
+      font-size: 2rem;
+      color: #0c3;
+      text-align: center;
+      margin-bottom: 1rem;
+    }
+    .section-title span {
+      color: #1a73e8;
+    }
+    .section-text, .timeline p, .benefits-grid p {
+      font-size: 1.1rem;
+      line-height: 1.6;
+      max-width: 700px;
+      margin: 0 auto 1rem auto;
     }
     .impacto-grid {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-      gap: 1rem;
-      margin-top: 1rem;
+      grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
+      gap: 2rem;
+      margin-top: 2rem;
+      font-size: 1.2rem;
     }
-    .impact-card {
-      background: linear-gradient(135deg, #1ec96b, #03a9f4);
-      color: white;
-      border-radius: 16px;
-      padding: 2rem;
+    .impacto-grid div {
+      background: #e9f6ed;
+      padding: 1.5rem;
+      border-radius: 10px;
       text-align: center;
-      font-size: 1.1rem;
-      font-weight: 500;
-      box-shadow: 0 8px 30px rgba(0, 0, 0, 0.08);
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
-    }
-    .impact-card:hover {
-      transform: translateY(-8px) scale(1.03);
-      box-shadow: 0 12px 40px rgba(0, 0, 0, 0.15);
+      font-weight: bold;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.06);
     }
     .timeline {
-      position: relative;
-      margin: 4rem 0;
-      padding-left: 2rem;
-      border-left: 4px solid #1ec96b;
+      max-width: 700px;
+      margin: 2rem auto;
     }
     .timeline-item {
-      position: relative;
-      background: #fff;
-      margin-bottom: 2.5rem;
-      padding: 1.5rem 2rem;
-      border-radius: 16px;
-      box-shadow: 0 8px 24px rgba(0, 0, 0, 0.05);
-      transition: transform 0.3s ease;
+      opacity: 0;
+      transform: translateY(40px);
+      transition: opacity 0.6s ease-out, transform 0.6s ease-out;
+      padding: 1rem;
+      border-left: 4px solid #4caf50;
+      margin-bottom: 1.5rem;
+      background-color: #f4f4f4;
+      border-radius: 6px;
     }
-    .timeline-item:hover {
-      transform: scale(1.03);
+    .timeline-item.visible {
+      opacity: 1;
+      transform: translateY(0);
     }
-    .timeline-item::before {
-      content: "";
-      position: absolute;
-      left: -13px;
-      top: 1rem;
-      width: 20px;
-      height: 20px;
-      background: #1ec96b;
-      border-radius: 50%;
-      border: 3px solid white;
-      box-shadow: 0 0 0 3px #1ec96b;
+    .timeline-item strong {
+      display: block;
+      color: #2c3e50;
+      margin-bottom: 0.5rem;
     }
     .benefits-grid {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
       gap: 2rem;
-      margin-top: 2.5rem;
-    }
-    .benefit-card {
-      background: #ffffff;
-      border-radius: 16px;
-      box-shadow: 0 8px 24px rgba(0, 0, 0, 0.06);
-      padding: 2rem;
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
-    }
-    .benefit-card:hover {
-      transform: scale(1.05);
-      box-shadow: 0 12px 40px rgba(0, 0, 0, 0.15);
-    }
-    .section-title span {
-      background: linear-gradient(90deg, #1ec96b, #03a9f4);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-    }
-    .team-grid {
-      display: flex;
-      justify-content: center;
-      gap: 2rem;
-      flex-wrap: wrap;
       margin-top: 2rem;
     }
-    .team-card {
+    .benefit-card {
       background: #fff;
-      border-radius: 16px;
+      border: 1px solid #e0e0e0;
+      border-left: 5px solid #2ecc71;
       padding: 1.5rem;
-      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.06);
-      max-width: 260px;
-      transition: transform 0.3s ease;
+      border-radius: 10px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.05);
+      transition: transform 0.3s;
     }
-    .team-card:hover {
-      transform: translateY(-8px);
+    .benefit-card:hover {
+      transform: translateY(-5px);
+    }
+    .benefit-card h3 {
+      color: #1a73e8;
+      margin-bottom: 0.5rem;
+    }
+    .benefit-card p {
+      color: #333;
+      font-size: 1rem;
+    }
+    .team-section p {
+      margin: 0.5rem 0;
+      font-size: 1.1rem;
     }
   </style>
 </head>
 <body>
-  <header id="header"></header>
+  <!-- HEADER -->
+  <!-- Se incluye desde main.js -->
+
   <main class="page-content">
     <section class="section">
-      <div class="container text-center fade-in">
+      <div class="container">
         <h1 class="section-title">Renta de Cajas <span>Reutilizables</span></h1>
-        <p class="subtitle">Mudanzas más fáciles + Planeta más limpio</p>
-        <p class="text-muted">Somos una empresa mexicana dedicada al alquiler de cajas reutilizables para mudanzas. Nuestra misión es hacer tu mudanza más fácil mientras cuidamos el medio ambiente.</p>
+        <p class="section-text text-center">MUDANZAS MÁS FÁCILES + PLANETA MÁS LIMPIO</p>
+        <p class="section-text text-center">Somos una empresa mexicana dedicada al alquiler de cajas reutilizables para mudanzas. Nuestra misión es hacer tu mudanza más fácil mientras cuidamos el medio ambiente.</p>
       </div>
     </section>
 
     <section class="section">
-      <div class="container fade-in">
-        <h2 class="section-title text-center">Nuestro Impacto Real</h2>
+      <div class="container text-center">
+        <h2 class="section-title">Nuestro Impacto Real</h2>
         <div class="impacto-grid">
-          <div class="impact-card"><strong>2400</strong><br>Mudanzas Completadas</div>
-          <div class="impact-card"><strong>4200</strong><br>Cajas de Cartón Evitadas</div>
-          <div class="impact-card"><strong>10T</strong><br>Toneladas de Cartón Ahorradas</div>
-          <div class="impact-card"><strong>98%</strong><br>Satisfacción del Cliente</div>
+          <div><strong>2400</strong><br>Mudanzas Completadas</div>
+          <div><strong>4200</strong><br>Cajas de Cartón Evitadas</div>
+          <div><strong>10 T</strong><br>Toneladas de Cartón Ahorradas</div>
+          <div><strong>98%</strong><br>Satisfacción del Cliente</div>
         </div>
       </div>
     </section>
 
     <section class="section">
-      <div class="container fade-in">
+      <div class="container">
         <h2 class="section-title text-center">Nuestra Historia</h2>
         <div class="timeline">
-          <div class="timeline-item">2022 - La Idea<br>Después de una mudanza frustrante llena de cajas rotas y desperdicio, decidimos que tenía que haber una mejor forma de hacer las cosas.</div>
-          <div class="timeline-item">2023 - Primeras Cajas<br>Compramos nuestros primeros lotes de 500 cajas reutilizables y comenzamos a ofrecer el servicio a amigos y familias en la CDMX.</div>
-          <div class="timeline-item">2024 - Crecimiento<br>Expandiendo a municipios, aumentamos a 2,000 cajas y comenzamos a trabajar de la mano con empresas de logística responsable.</div>
-          <div class="timeline-item">2024 - Plataforma Digital<br>Lanzamos el portal web para facilitar la renta de cajas y mejorar la experiencia del cliente.</div>
-          <div class="timeline-item">2025 - Presente<br>Hoy contamos con más de 500 clientes en todo el país, y nuestro stock de cajas alquilables alcanza las 3,000 unidades con alta rotación.</div>
-          <div class="timeline-item">2025 - Futuro<br>Planeamos expandirnos a Guadalajara y Monterrey, además de seguir sumando complementos como asistencia profesional.</div>
+          <div class="timeline-item"><strong>2022 - La Idea</strong>Después de una mudanza frustrante llena de cajas rotas y desperdicio, decidimos que tenía que haber una mejor forma de hacer las cosas.</div>
+          <div class="timeline-item"><strong>2023 - Primeras Cajas</strong>Compramos nuestros primeros lotes de 500 cajas reutilizables y comenzamos a ofrecer el servicio a amigos y familias en la CDMX.</div>
+          <div class="timeline-item"><strong>2024 - Crecimiento</strong>Expandiendo a municipios, aumentamos a 2,000 cajas y comenzamos a trabajar de la mano con empresas de logística responsable.</div>
+          <div class="timeline-item"><strong>2024 - Plataforma Digital</strong>Lanzamos el portal web para facilitar la renta de cajas y mejorar la experiencia del cliente.</div>
+          <div class="timeline-item"><strong>2025 - Presente</strong>Hoy contamos con más de 500 clientes en todo el país, y nuestro stock de cajas alquilables alcanza las 3,000 unidades con alta rotación.</div>
+          <div class="timeline-item"><strong>2025 - Futuro</strong>Planeamos expandirnos a Guadalajara y Monterrey, además de seguir sumando complementos como asistencia profesional.</div>
         </div>
       </div>
     </section>
 
     <section class="section">
-      <div class="container fade-in">
-        <h2 class="section-title text-center">¿Por Qué Elegir <span>greenhauL</span>?</h2>
+      <div class="container text-center">
+        <h2 class="section-title">¿Por Qué Elegir <span>greenhauL</span>?</h2>
         <div class="benefits-grid">
           <div class="benefit-card">
             <h3>Impacto Ambiental</h3>
@@ -171,36 +168,36 @@
       </div>
     </section>
 
-    <section class="section">
-      <div class="container text-center fade-in">
+    <section class="section team-section">
+      <div class="container text-center">
         <h2 class="section-title">Conoce al Equipo</h2>
-        <div class="team-grid">
-          <div class="team-card">
-            <strong>Paola Martínez</strong><br>Fundadora y CEO
-          </div>
-          <div class="team-card">
-            <strong>Andrés López</strong><br>Co-fundador y Operaciones
-          </div>
-          <div class="team-card">
-            <strong>Sofía Ramírez</strong><br>Desarrollo y Tecnología
-          </div>
-        </div>
+        <p><strong>Paola Martínez</strong><br>Fundadora y CEO</p>
+        <p><strong>Andrés López</strong><br>Co-fundador y Operaciones</p>
+        <p><strong>Sofía Ramírez</strong><br>Desarrollo y Tecnología</p>
       </div>
     </section>
   </main>
-  <footer id="footer"></footer>
+
+  <!-- FOOTER, CARRITO Y NOTIFICACIONES -->
+  <div class="cart-modal-overlay" id="cartModalOverlay">...</div>
+  <div class="cart-notification" id="cartNotification">...</div>
+
+  <!-- JS GLOBAL -->
   <script type="module" src="assets/js/main.js"></script>
   <script>
     document.addEventListener('DOMContentLoaded', () => {
-      const observer = new IntersectionObserver(entries => {
-        entries.forEach(entry => {
-          if (entry.isIntersecting) {
-            entry.target.classList.add('visible');
-          }
-        });
-      }, { threshold: 0.2 });
+      const timelineItems = document.querySelectorAll('.timeline-item');
+      if (timelineItems.length > 0) {
+        const observer = new IntersectionObserver(entries => {
+          entries.forEach(entry => {
+            if (entry.isIntersecting) {
+              entry.target.classList.add('visible');
+            }
+          });
+        }, { threshold: 0.4 });
 
-      document.querySelectorAll('.fade-in').forEach(el => observer.observe(el));
+        timelineItems.forEach(item => observer.observe(item));
+      }
     });
   </script>
 </body>
