--- a/nosotros.html
+++ b/nosotros.html
@@ -2,118 +2,70 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Nosotros - Mudanzas Ecológicas | greenhauL</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
   <link rel="stylesheet" href="assets/css/styles.css" />
   <link rel="stylesheet" href="assets/css/pages.css" />
   <style>
-    body {
-      font-family: 'Segoe UI', sans-serif;
-      background-color: #f9f9f9;
-      color: #222;
-    }
-    .section {
-      padding: 4rem 1rem;
-      background-color: #fff;
-      margin-bottom: 2rem;
-      border-radius: 12px;
-      box-shadow: 0 6px 18px rgba(0,0,0,0.05);
-    }
-    .section-title {
-      font-size: 2rem;
-      color: #0c3;
-      text-align: center;
-      margin-bottom: 1rem;
-    }
-    .section-title span {
-      color: #1a73e8;
-    }
-    .section-text, .timeline p, .benefits-grid p {
-      font-size: 1.1rem;
-      line-height: 1.6;
-      max-width: 700px;
-      margin: 0 auto 1rem auto;
-    }
-    .impacto-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
-      gap: 2rem;
-      margin-top: 2rem;
-      font-size: 1.2rem;
-    }
-    .impacto-grid div {
-      background: #e9f6ed;
-      padding: 1.5rem;
-      border-radius: 10px;
-      text-align: center;
-      font-weight: bold;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.06);
-    }
-    .timeline {
-      max-width: 700px;
-      margin: 2rem auto;
-    }
     .timeline-item {
       opacity: 0;
       transform: translateY(40px);
       transition: opacity 0.6s ease-out, transform 0.6s ease-out;
-      padding: 1rem;
-      border-left: 4px solid #4caf50;
-      margin-bottom: 1.5rem;
-      background-color: #f4f4f4;
-      border-radius: 6px;
     }
+
     .timeline-item.visible {
       opacity: 1;
       transform: translateY(0);
     }
-    .timeline-item strong {
-      display: block;
-      color: #2c3e50;
-      margin-bottom: 0.5rem;
-    }
-    .benefits-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-      gap: 2rem;
-      margin-top: 2rem;
-    }
-    .benefit-card {
-      background: #fff;
-      border: 1px solid #e0e0e0;
-      border-left: 5px solid #2ecc71;
-      padding: 1.5rem;
-      border-radius: 10px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.05);
-      transition: transform 0.3s;
-    }
-    .benefit-card:hover {
-      transform: translateY(-5px);
-    }
-    .benefit-card h3 {
-      color: #1a73e8;
-      margin-bottom: 0.5rem;
-    }
-    .benefit-card p {
-      color: #333;
-      font-size: 1rem;
-    }
-    .team-section p {
-      margin: 0.5rem 0;
-      font-size: 1.1rem;
-    }
-  </style>
+  </style>  
 </head>
 <body>
   <!-- HEADER -->
-  <!-- Se incluye desde main.js -->
+  <header>
+    <nav class="navbar">
+      <div class="container navbar-content">
+        <a href="index.html" class="logo">
+          <img src="assets/img/Greenhaul-fl.svg" alt="Logo de GreenHaul" />
+        </a>
+        <button class="navbar-toggler" id="navbarToggler" aria-label="Toggle navigation">
+          <span class="toggler-icon"></span>
+          <span class="toggler-icon"></span>
+          <span class="toggler-icon"></span>
+        </button>
+        <div class="navbar-collapse" id="navbarCollapse">
+          <ul class="nav-links-list">
+            <li><a href="index.html" class="nav-link">Inicio</a></li>
+            <li><a href="productos.html" class="nav-link">Productos</a></li>
+            <li><a href="servicios.html" class="nav-link">Servicios</a></li>
+            <li><a href="nosotros.html" class="nav-link active">Nosotros</a></li>
+            <li><a href="contacto.html" class="nav-link">Contacto</a></li>
+            <li><a href="faq.html" class="nav-link">Preguntas</a></li>
+          </ul>
+          <div class="navbar-right-items">
+            <div class="navbar-user-actions" id="navbarUserActions">
+              <a href="login.html" class="btn btn-outline" id="loginBtn">Iniciar Sesión</a>
+              <a href="cuenta.html" class="nav-link" id="accountLink" style="display: none;">Hola, <span id="userName"></span></a>
+              <button class="btn-tertiary" id="logoutBtn" style="display: none;" title="Cerrar Sesión"><i class="fas fa-sign-out-alt"></i></button>
+            </div>
+            <div class="nav-icons">
+              <a href="#" class="nav-icon cart-icon" id="cartIcon">
+                <i class="fas fa-shopping-cart"></i>
+                <span class="cart-count" id="cartCount">0</span>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </nav>
+  </header>
 
+  <!-- CONTENIDO -->
   <main class="page-content">
     <section class="section">
       <div class="container">
-        <h1 class="section-title">Renta de Cajas <span>Reutilizables</span></h1>
-        <p class="section-text text-center">MUDANZAS MÁS FÁCILES + PLANETA MÁS LIMPIO</p>
+        <h1 class="section-title">Renta de Cajas <span class="highlight-sostenible">Reutilizables</span></h1>
+        <p class="text-center">MUDANZAS MÁS FÁCILES + PLANETA MÁS LIMPIO</p>
         <p class="section-text text-center">Somos una empresa mexicana dedicada al alquiler de cajas reutilizables para mudanzas. Nuestra misión es hacer tu mudanza más fácil mientras cuidamos el medio ambiente.</p>
       </div>
     </section>
@@ -134,19 +86,31 @@
       <div class="container">
         <h2 class="section-title text-center">Nuestra Historia</h2>
         <div class="timeline">
-          <div class="timeline-item"><strong>2022 - La Idea</strong>Después de una mudanza frustrante llena de cajas rotas y desperdicio, decidimos que tenía que haber una mejor forma de hacer las cosas.</div>
-          <div class="timeline-item"><strong>2023 - Primeras Cajas</strong>Compramos nuestros primeros lotes de 500 cajas reutilizables y comenzamos a ofrecer el servicio a amigos y familias en la CDMX.</div>
-          <div class="timeline-item"><strong>2024 - Crecimiento</strong>Expandiendo a municipios, aumentamos a 2,000 cajas y comenzamos a trabajar de la mano con empresas de logística responsable.</div>
-          <div class="timeline-item"><strong>2024 - Plataforma Digital</strong>Lanzamos el portal web para facilitar la renta de cajas y mejorar la experiencia del cliente.</div>
-          <div class="timeline-item"><strong>2025 - Presente</strong>Hoy contamos con más de 500 clientes en todo el país, y nuestro stock de cajas alquilables alcanza las 3,000 unidades con alta rotación.</div>
-          <div class="timeline-item"><strong>2025 - Futuro</strong>Planeamos expandirnos a Guadalajara y Monterrey, además de seguir sumando complementos como asistencia profesional.</div>
+          <div class="timeline-item">
+            <p><strong>2022 - La Idea</strong><br>Después de una mudanza frustrante llena de cajas rotas y desperdicio, decidimos que tenía que haber una mejor forma de hacer las cosas.</p>
+          </div>
+          <div class="timeline-item">
+            <p><strong>2023 - Primeras Cajas</strong><br>Compramos nuestros primeros lotes de 500 cajas reutilizables y comenzamos a ofrecer el servicio a amigos y familias en la CDMX.</p>
+          </div>
+          <div class="timeline-item">
+            <p><strong>2024 - Crecimiento</strong><br>Expandiendo a municipios, aumentamos a 2,000 cajas y comenzamos a trabajar de la mano con empresas de logística responsable.</p>
+          </div>
+          <div class="timeline-item">
+            <p><strong>2024 - Plataforma Digital</strong><br>Lanzamos el portal web para facilitar la renta de cajas y mejorar la experiencia del cliente.</p>
+          </div>
+          <div class="timeline-item">
+            <p><strong>2025 - Presente</strong><br>Hoy contamos con más de 500 clientes en todo el país, y nuestro stock de cajas alquilables alcanza las 3,000 unidades con alta rotación.</p>
+          </div>
+          <div class="timeline-item">
+            <p><strong>2025 - Futuro</strong><br>Planeamos expandirnos a Guadalajara y Monterrey, además de seguir sumando complementos como asistencia profesional.</p>
+          </div>
         </div>
       </div>
     </section>
 
     <section class="section">
       <div class="container text-center">
-        <h2 class="section-title">¿Por Qué Elegir <span>greenhauL</span>?</h2>
+        <h2 class="section-title">¿Por Qué Elegir <span class="highlight-sostenible">greenhauL</span>?</h2>
         <div class="benefits-grid">
           <div class="benefit-card">
             <h3>Impacto Ambiental</h3>
@@ -168,7 +132,7 @@
       </div>
     </section>
 
-    <section class="section team-section">
+    <section class="section">
       <div class="container text-center">
         <h2 class="section-title">Conoce al Equipo</h2>
         <p><strong>Paola Martínez</strong><br>Fundadora y CEO</p>
@@ -178,11 +142,68 @@
     </section>
   </main>
 
-  <!-- FOOTER, CARRITO Y NOTIFICACIONES -->
-  <div class="cart-modal-overlay" id="cartModalOverlay">...</div>
-  <div class="cart-notification" id="cartNotification">...</div>
+  <!-- FOOTER, CARRITO Y JS INCLUIDOS -->
+  <footer class="footer">
+    <div class="container footer-content">
+      <div class="footer-info">
+        <h3>greenhauL</h3>
+        <p>Mudanzas sostenibles, sin complicaciones.</p>
+        <p><i class="fas fa-phone-alt"></i> +52 55 1234 5678</p>
+        <p><i class="fas fa-envelope"></i> info@greenhauL.com</p>
+        <p><i class="fas fa-map-marker-alt"></i> Ciudad de México</p>
+      </div>
+      <div class="footer-links">
+        <h3>Enlaces Rápidos</h3>
+        <ul>
+          <li><a href="index.html">Inicio</a></li>
+          <li><a href="productos.html">Productos</a></li>
+          <li><a href="servicios.html">Servicios</a></li>
+          <li><a href="nosotros.html">Nosotros</a></li>
+          <li><a href="contacto.html">Contacto</a></li>
+        </ul>
+      </div>
+      <div class="footer-social-links">
+        <h3>Síguenos</h3>
+        <div class="social-icons-wrapper">
+          <a href="#" class="social-icon" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+          <a href="#" class="social-icon" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+          <a href="#" class="social-icon" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+        </div>
+      </div>
+    </div>
+    <div class="footer-bottom">
+      &copy; <span id="current-year">2025</span> greenhauL. Todos los derechos reservados.
+    </div>
+  </footer>
 
-  <!-- JS GLOBAL -->
+  <div class="cart-modal-overlay" id="cartModalOverlay">
+    <div class="cart-modal">
+      <div class="cart-modal-header">
+        <h2>Tu Carrito</h2>
+        <button class="close-modal-btn" id="closeCartModalBtn">&times;</button>
+      </div>
+      <div class="cart-modal-body" id="cartItemsContainer"></div>
+      <div class="cart-modal-footer">
+        <div class="cart-summary">
+          <p>Subtotal: <span id="cartSubtotal">$0.00</span></p>
+          <p>Impuestos (16%): <span id="cartTaxes">$0.00</span></p>
+          <h3>Total: <span id="cartTotal">$0.00</span></h3>
+        </div>
+        <div class="cart-footer-buttons">
+          <button class="btn btn-secondary empty-cart-btn" id="emptyCartBtn">Vaciar Carrito</button>
+          <a href="confirmacion-entrega-recoleccion.html" class="btn btn-primary proceed-to-checkout-btn" id="proceedToCheckoutBtn">Finalizar Compra</a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="cart-notification" id="cartNotification">
+    <div class="notification-content">
+      <div class="notification-icon-wrapper"><span class="notification-icon"></span></div>
+      <p id="notificationText"></p>
+    </div>
+  </div>
+
   <script type="module" src="assets/js/main.js"></script>
   <script>
     document.addEventListener('DOMContentLoaded', () => {
@@ -199,7 +220,6 @@
         timelineItems.forEach(item => observer.observe(item));
       }
     });
-    
-  </script>
+  </script>  
 </body>
 </html>
