--- a/nosotros.html
+++ b/nosotros.html
@@ -12,7 +12,46 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico"/>
 </head>
 <body>
-    <!-- HEADER Y FOOTER NO SE MODIFICAN -->
+    <!-- HEADER CON INTEGRACIÓN DE LOCALSTORAGE -->
+    <header>
+        <nav class="navbar">
+            <div class="container navbar-content">
+                <a href="index.html" class="logo">
+                    <img src="assets/img/Greenhaul-fl.svg" alt="Logo de GreenHaul" />
+                </a>
+                <button class="navbar-toggler" id="navbarToggler" aria-label="Toggle navigation">
+                    <span class="toggler-icon"></span>
+                    <span class="toggler-icon"></span>
+                    <span class="toggler-icon"></span>
+                </button>
+                <div class="navbar-collapse" id="navbarCollapse">
+                    <ul class="nav-links-list">
+                        <li><a href="index.html" class="nav-link">Inicio</a></li>
+                        <li><a href="productos.html" class="nav-link">Productos</a></li>
+                        <li><a href="servicios.html" class="nav-link">Servicios</a></li>
+                        <li><a href="nosotros.html" class="nav-link active">Nosotros</a></li>
+                        <li><a href="contacto.html" class="nav-link">Contacto</a></li>
+                        <li><a href="faq.html" class="nav-link">Preguntas</a></li>
+                    </ul>
+                    <div class="navbar-right-items">
+                        <div class="navbar-user-actions" id="navbarUserActions">
+                            <a href="login.html" class="btn btn-outline" id="loginBtn">Iniciar Sesión</a>
+                            <a href="cuenta.html" class="nav-link" id="accountLink" style="display: none;">Hola, <span id="userName"></span></a>
+                            <button class="btn-tertiary" id="logoutBtn" style="display: none;" title="Cerrar Sesión">
+                                <i class="fas fa-sign-out-alt"></i>
+                            </button>
+                        </div>
+                        <div class="nav-icons">
+                            <a href="#" class="nav-icon cart-icon" id="cartIcon">
+                                <i class="fas fa-shopping-cart"></i>
+                                <span class="cart-count" id="cartCount">0</span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </nav>
+    </header>
 
     <main class="page-content">
         <!-- Hero principal -->
@@ -231,5 +270,66 @@
             </div>
         </section>
     </main>
+
+    <!-- FOOTER CON INTEGRACIÓN DE LOCALSTORAGE -->
+    <footer class="footer">
+        <div class="container footer-content">
+            <div class="footer-info">
+                <h3>greenhauL</h3>
+                <p>Mudanzas sostenibles, sin complicaciones.</p>
+                <p><i class="fas fa-phone-alt"></i> +52 55 1234 5678</p>
+                <p><i class="fas fa-envelope"></i> info@greenhaul.com</p>
+                <p><i class="fas fa-map-marker-alt"></i> Ciudad de México</p>
+            </div>
+            <div class="footer-links">
+                <h3>Enlaces Rápidos</h3>
+                <ul>
+                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="productos.html">Productos</a></li>
+                    <li><a href="servicios.html">Servicios</a></li>
+                    <li><a href="nosotros.html">Nosotros</a></li>
+                    <li><a href="contacto.html">Contacto</a></li>
+                </ul>
+            </div>
+            <div class="footer-social-links">
+                <h3>Síguenos</h3>
+                <div class="social-icons-wrapper">
+                    <a href="#" class="social-icon" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#" class="social-icon" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+                    <a href="#" class="social-icon" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+                </div>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            &copy; <span id="current-year">2025</span> greenhauL. Todos los derechos reservados.
+        </div>
+    </footer>
+
+    <!-- MODAL DEL CARRITO Y NOTIFICACIÓN -->
+    <div class="cart-modal-overlay" id="cartModalOverlay">
+        <div class="cart-modal">
+            <div class="cart-modal-header"><h2>Tu Carrito</h2><button class="close-modal-btn" id="closeCartModalBtn" title="Cerrar">&times;</button></div>
+            <div class="cart-modal-body" id="cartItemsContainer"></div>
+            <div class="cart-modal-footer">
+                <div class="cart-summary">
+                    <p>Subtotal: <span id="cartSubtotal">$0.00</span></p>
+                    <p>Impuestos (16%): <span id="cartTaxes">$0.00</span></p>
+                    <h3>Total: <span id="cartTotal">$0.00</span></h3>
+                </div>
+                <div class="cart-footer-buttons">
+                    <button class="btn btn-secondary empty-cart-btn" id="emptyCartBtn">Vaciar Carrito</button>
+                    <a href="confirmacion-entrega-recoleccion.html" class="btn btn-primary proceed-to-checkout-btn" id="proceedToCheckoutBtn">Finalizar Compra</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="cart-notification" id="cartNotification">
+        <div class="notification-content">
+            <div class="notification-icon-wrapper"><span class="notification-icon"></span></div>
+            <p id="notificationText"></p>
+        </div>
+    </div>
+    <!-- JAVASCRIPT PRINCIPAL PARA SESIÓN Y CARRITO -->
+    <script src="assets/js/main.js"></script>
 </body>
 </html>
